tests/neg/i13960.check
-- [E108] Declaration Error: tests/neg/i13960.scala:13:10 --------------------------------------------------------------
13 |    case A() => // error
   |         ^^^
   |          [31mA[0m is not a valid result type of an unapply method of an [35mextractor[0m.
   |
   | longer explanation available when compiling with `-explain`
